--- a/src/sonar-project.properties
+++ b/src/sonar-project.properties
@@ -2,4 +2,4 @@
 sonar.projectKey=simple-node-js-react-npm-app
 sonar.projectVersion=1.0
 //location React source files who need to be analysed by Sonarqube
-sonar.sources=src
+sonar.sources=.
