--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,6 @@
 sonar.projectKey=simple-node-js-react-npm-app
 sonar.projectVersion=1.0
 //location React source files who need to be analysed by Sonarqube
-sonar.sources=src/
+sonar.sources=src/, public/
+sonar.exclusions = jenkins/, node_modules/
 //sonar.login= 
